samples/_failures_safe/1761250075_307ede_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3346c304.c: In function ‘main’:
./samples/SAFE/__tmp_3346c304.c:167:5: error: expected declaration or statement at end of input
  167 |     state_machine_init(&sm);
      |     ^~~~~~~~~~~~~~~~~~
